// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmLiBankTransaction has the expected html structure 1`] = `
<tm-li-transaction-stub
  block="3436"
  color="#215C2F"
  time="2042"
>
  <div>
    
      Received 
      
    <b>
      1234
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span>
    From A
  </span>
</tm-li-transaction-stub>
`;

exports[`TmLiBankTransaction should show outgoing transactions 1`] = `
<tm-li-transaction-stub
  block="3438"
  color="#25293F"
  time="2052"
>
  <div
    slot="caption"
  >
    
      Sent 
      
    <b>
      1234
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span
    slot="details"
  >
    
        To A
      
  </span>
</tm-li-transaction-stub>
`;

exports[`TmLiBankTransaction should show transactions sent to the sender 1`] = `
<tm-li-transaction-stub
  block="466"
  color="#25293F"
  time="1142"
>
  <div
    slot="caption"
  >
    
      Sent 
      
    <b>
      1234
    </b>
     
    <span>
       JBCOINS
    </span>
  </div>
   
  <span
    slot="details"
  >
    
        To yourself!
      
  </span>
</tm-li-transaction-stub>
`;
